edited using vim

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
 </head>
-<body>
+<body><h1>My MineSweeper</h1>
 <!-- <table>
   <tr id="0"><td ></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
   <tr id="1"><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
